Added Content Cards

--- a/index.html
+++ b/index.html
@@ -11,6 +11,153 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 class="text-indigo-500 text-2xl font-bold">Welcome to our page.</h1>
+    <div class="p-12">
+      <h1 class="text-indigo-700 text-4xl font-bold">Welcome to our pages.</h1>
+      <div class="my-8"></div>
+      <h4 class="font-bold">Content Cards</h4>
+
+      <div class="flex w-full space-x-8">
+        <div
+          class="
+            h-96
+            border-black border-2
+            w-64
+            rounded-lg
+            shadow
+            flex flex-col
+          "
+        >
+          <img
+            class="w-full h-44 rounded-t-lg"
+            src="https://images.pexels.com/photos/4462782/pexels-photo-4462782.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+            alt=""
+            style="object-fit: cover"
+          />
+          <div
+            class="
+              border-t-4 border-gray-300
+              flex flex-col
+              items-center
+              py-4
+              space-y-6
+            "
+          >
+            <div class="font-bold text-lg text-grey-700">Title</div>
+            <div class="w-5/6">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div
+              class="
+                w-1/2
+                rounded
+                h-10
+                bg-indigo-500
+                text-white
+                font-semibold
+                flex
+                justify-center
+                items-center
+              "
+            >
+              Info
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="
+            h-96
+            border-black border-2
+            w-64
+            rounded-lg
+            shadow
+            flex flex-col
+          "
+        >
+          <img
+            class="w-full h-44 rounded-t-lg"
+            src="https://images.pexels.com/photos/4335249/pexels-photo-4335249.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            alt=""
+            style="object-fit: cover"
+          />
+          <div
+            class="
+              border-t-4 border-gray-300
+              flex flex-col
+              items-center
+              py-4
+              space-y-6
+            "
+          >
+            <div class="font-bold text-lg text-grey-700">Title</div>
+            <div class="w-5/6">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div
+              class="
+                w-1/2
+                rounded
+                h-10
+                bg-indigo-500
+                text-white
+                font-semibold
+                flex
+                justify-center
+                items-center
+              "
+            >
+              Info
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="
+            h-96
+            border-black border-2
+            w-64
+            rounded-lg
+            shadow
+            flex flex-col
+          "
+        >
+          <img
+            class="w-full h-44 rounded-t-lg"
+            src="https://images.pexels.com/photos/1456706/pexels-photo-1456706.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+            alt=""
+            style="object-fit: cover"
+          />
+          <div
+            class="
+              border-t-4 border-gray-300
+              flex flex-col
+              items-center
+              py-4
+              space-y-6
+            "
+          >
+            <div class="font-bold text-lg text-grey-700">Title</div>
+            <div class="w-5/6">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <div
+              class="
+                w-1/2
+                rounded
+                h-10
+                bg-indigo-500
+                text-white
+                font-semibold
+                flex
+                justify-center
+                items-center
+              "
+            >
+              Info
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
