Completed pricing table

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="p-12">
       <h1 class="text-indigo-700 text-4xl font-bold">Welcome to our pages.</h1>
       <div class="my-8"></div>
-      <h4 class="font-bold">Content Cards</h4>
 
+      <h4 class="font-bold">Content Cards</h4>
       <div class="flex w-full space-x-8">
         <div
           class="
@@ -154,6 +154,107 @@
               "
             >
               Info
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="my-8"></div>
+      <div style="height: 500px; background-color: #2e6d84">
+        <h4 class="font-bold text-white">Pricing Tables</h4>
+        <div class="mt-12">
+          <div class="w-full flex justify-center">
+            <div class="flex h-full items-center">
+              <div
+                class="
+                  h-64
+                  bg-white
+                  rounded
+                  w-64
+                  flex flex-col
+                  items-center
+                  pt-12
+                "
+              >
+                <div class="text-gray-800 font-bold text-xl">Hobby</div>
+                <div class="text-gray-500 text-xl">$8/month</div>
+                <div class="text-center mt-4">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="text-center mt-6 text-indigo-800 cursor-pointer">
+                  Get Started
+                </div>
+              </div>
+              <div
+                class="
+                  h-80
+                  bg-white
+                  rounded
+                  w-64
+                  mx-12
+                  flex flex-col
+                  items-center
+                "
+              >
+                <div
+                  class="
+                    w-2/3
+                    mx-auto
+                    bg-indigo-800
+                    text-white
+                    h-12
+                    flex
+                    justify-center
+                    items-center
+                    rounded-b
+                    mb-8
+                  "
+                >
+                  Most Popular
+                </div>
+                <div class="text-gray-800 font-bold text-xl">Pro</div>
+                <div class="text-gray-500 text-xl">$12/month</div>
+                <div class="text-center mt-4">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div
+                  class="
+                    w-2/3
+                    mx-auto
+                    flex
+                    justify-center
+                    items-center
+                    bg-indigo-800
+                    mt-12
+                    text-white
+                    font-semibold
+                    rounded
+                    h-12
+                    cursor-pointer
+                  "
+                >
+                  Get Started
+                </div>
+              </div>
+              <div
+                class="
+                  h-64
+                  bg-white
+                  rounded
+                  w-64
+                  flex flex-col
+                  items-center
+                  pt-12
+                "
+              >
+                <div class="text-gray-800 font-bold text-xl">Team</div>
+                <div class="text-gray-500 text-xl">$229/month</div>
+                <div class="text-center mt-4">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                </div>
+                <div class="text-center mt-6 text-indigo-800 cursor-pointer">
+                  Get Started
+                </div>
+              </div>
             </div>
           </div>
         </div>
