Added our signup infographic

--- a/index.html
+++ b/index.html
@@ -180,7 +180,16 @@
                 <div class="text-center mt-4">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 </div>
-                <div class="text-center mt-6 text-indigo-800 cursor-pointer">
+                <div
+                  class="
+                    text-center
+                    mt-6
+                    text-indigo-800
+                    cursor-pointer
+                    border-b-2
+                    hover:border-indigo-800
+                  "
+                >
                   Get Started
                 </div>
               </div>
@@ -251,12 +260,226 @@
                 <div class="text-center mt-4">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 </div>
-                <div class="text-center mt-6 text-indigo-800 cursor-pointer">
+                <div
+                  class="
+                    text-center
+                    mt-6
+                    text-indigo-800
+                    cursor-pointer
+                    border-b-2
+                    hover:border-indigo-800
+                  "
+                >
                   Get Started
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div style="height: 500px; background-color: #e2e0ce">
+        <div class="text-gray-800 font-bold">Signup infographic</div>
+        <div
+          class="mt-12 text-3xl w-full h-20 flex justify-center items-center"
+        >
+          Sign Up for Exlusive Access
+        </div>
+        <div
+          class="
+            w-1/3
+            mx-auto
+            border-b-2 border-gray-500
+            text-gray-500 text-center
+            h-12
+            flex
+            items-center
+            justify-center
+          "
+        >
+          Enter Your Email Here
+        </div>
+        <div class="w-full h-16 flex justify-center">
+          <div
+            class="
+              w-1/6
+              mx-auto
+              text-white
+              font-bold
+              rounded-full
+              h-12
+              bg-indigo-600
+              my-8
+              flex
+              justify-center
+              items-center
+            "
+          >
+            Sign Up
+          </div>
+        </div>
+        <div class="grid grid-cols-7 mt-12 gap-2">
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          ></div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-12 w-12"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"
+              />
+            </svg>
+            <div class="font-semibold text-gray-900">FREE Shipping</div>
+            <div class="text-sm text-gray-600">All Orders Over $99</div>
+          </div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-12 w-12"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+              />
+            </svg>
+            <div class="font-semibold text-gray-900">3-Day Delivery</div>
+            <div class="text-sm text-gray-600">Carefully Packed With Love</div>
+          </div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-12 w-12"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"
+              />
+            </svg>
+            <div class="font-semibold text-gray-900">Buy Now Pay Later</div>
+            <div class="text-sm text-gray-600">With Debit or Credit</div>
+          </div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-12 w-12"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"
+              />
+            </svg>
+            <div class="font-semibold text-gray-900">Safe Payment</div>
+            <div class="text-sm text-gray-600">Secure Online Payments</div>
+          </div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-12 w-12"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+              />
+            </svg>
+            <div class="font-semibold text-gray-900">Support 24/7</div>
+            <div class="text-sm text-gray-600">(555) 555-5555</div>
+          </div>
+          <div
+            class="
+              w-full
+              h-32
+              rounded-lg
+              flex flex-col
+              items-center
+              py-6
+              text-gray-600
+            "
+          ></div>
         </div>
       </div>
     </div>
